<resources>
    <string name="app_name">Emotion Run</string>
    <string name="score">🍰 %1$s</string>
    <string name="score_menu">🍰 %1$d 👏</string>
    <string name="life">Life: %1$s</string>

    <string name="need_camera_permission_rationale">Game uses camera\nto capture your emotions.\nAllow application\nto
        use camera.
    </string>
    <string name="need_camera_permission_button">Allow</string>
    <string name="rules_smile">😄=👆</string>
    <string name="rules_not_smile">😐=👇</string>
    <string name="rules_blink">🙈=x2🍰</string>

    <string name="smile_reaction">😄</string>
    <string name="not_smile_reaction">😐</string>
    <string name="not_blink_reaction">👀</string>
    <string name="blink_reaction">🙈</string>

    <string name="menu_play_label">Play</string>
    <string name="menu_info_label">Info</string>
    <string name="menu_restart_label">Restart</string>
    <string name="menu_pause_label">Pause</string>

    <string name="info_label">Info</string>
    <string name="open_source_library_notices">Open source library notices</string>

    <string name="analytics_notices">App does not send any analytics or personal data.</string>

    <string name="info_assets_text">
        Play, info, pause, restart icons are under Apache License Version 2.0.
    </string>

    <string name="menu_share">Share with friends</string>
    <string name="share_result_text">
        My score in the "Emotion Run" is %1$d.\n
        Game in which you control unit by smile and eyes.\n
        Try it: https://play.google.com/store/apps/details?id=com.github.ivanshafran.emotiongame
    </string>
    <string name="share_game_text">
        Game in which you control unit by smile and eyes.
        Try it: https://play.google.com/store/apps/details?id=com.github.ivanshafran.emotiongame
    </string>

    <string name="accept_main_text">Please read the <a href="https://www.websitepolicies.com/policies/view/M9AiYYGp">Terms of Use</a>
        and the <a href="https://app.termly.io/document/privacy-notice/764c723e-f3a3-4345-80d5-5f118efdb190">Privacy Policy</a>
        carefully before using the app.\n\nIn short, the app uses a camera for the game mechanic
        but doesn\'t send any data to any services.\nAlso, it doesn\'t have any ads.\nEnjoy! 😉
    </string>
    <string name="accept_checkbox_text">I have read and agree to the Terms of Use and the Privacy Policy</string>
    <string name="accept_button_text">AGREE &amp; CONTINUE</string>

</resources>
